src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_1.snap
---
source: src/parser.rs
description: "if (x +) { x }"
expression: stmts
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected ')'."), (0,7)->(0,8)),
        ),
        consequence: Ok(
            Block {
                token: Token(LBrace, "{", (0,9)->(0,10)),
                statements: [
                    Identifier {
                        token: Token(Identifier, "x", (0,11)->(0,12)),
                        name: "x",
                    },
                ],
            },
        ),
        alternative: Ok(
            None,
        ),
    },
]
