src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_10.snap
---
source: src/parser/test.rs
description: "if (@) { x }"
expression: result
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,4)->(0,5)),
        ),
        consequence: Ok(
            Block {
                token: Token(LBrace, "{", (0,7)->(0,8)),
                statements: [
                    Identifier {
                        token: Token(Identifier, "x", (0,9)->(0,10)),
                        name: "x",
                    },
                ],
                start: (0,7),
                end: (0,11),
            },
        ),
        alternative: Ok(
            None,
        ),
    },
]

===================================

if (@) { x }
    ^ [Error] SyntaxError: Unexpected '@'.
